--- a/homework/stage06_data-preprocessing/src/cleaning.ipynb
+++ b/homework/stage06_data-preprocessing/src/cleaning.ipynb
@@ -231,6 +231,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# clean the data\n",
     "df_cleaned = df.copy()\n",
     "df_cleaned = fill_missing_median(df_cleaned)\n",
     "df_cleaned = drop_missing(df_cleaned, threshold=0.5)\n",
