--- a/homework/stage07_outliers-risk-assumptions/notebooks/stage07_outliers-risk-assumptions_homework.ipynb
+++ b/homework/stage07_outliers-risk-assumptions/notebooks/stage07_outliers-risk-assumptions_homework.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-08-20T21:43:37.919564Z",
-     "start_time": "2025-08-20T21:43:37.640505Z"
+     "end_time": "2025-08-21T00:17:11.982412Z",
+     "start_time": "2025-08-21T00:17:11.972562Z"
     }
    },
    "source": [
@@ -69,17 +69,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Synthetic dataset with two columns created and saved to ../data/raw/outliers_homework.csv\n"
+      "File already exists at ../data/raw/outliers_homework.csv. Skipping CSV creation to avoid overwrite.\n"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-20T21:44:18.229685Z",
-     "start_time": "2025-08-20T21:44:15.642956Z"
+     "end_time": "2025-08-21T00:17:11.993224Z",
+     "start_time": "2025-08-21T00:17:11.991090Z"
     }
    },
    "cell_type": "code",
@@ -95,13 +95,13 @@
    ],
    "id": "8460807766a55b52",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-20T21:45:08.378825Z",
-     "start_time": "2025-08-20T21:45:08.367809Z"
+     "end_time": "2025-08-21T00:17:12.004460Z",
+     "start_time": "2025-08-21T00:17:11.997926Z"
     }
    },
    "cell_type": "code",
@@ -189,18 +189,18 @@
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-20T21:45:23.878501Z",
-     "start_time": "2025-08-20T21:45:23.872871Z"
+     "end_time": "2025-08-21T00:17:12.035972Z",
+     "start_time": "2025-08-21T00:17:12.033673Z"
     }
    },
    "cell_type": "code",
@@ -227,13 +227,13 @@
    ],
    "id": "8e42fdb03ae9ced3",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-20T21:45:34.610391Z",
-     "start_time": "2025-08-20T21:45:34.608339Z"
+     "end_time": "2025-08-21T00:17:12.073890Z",
+     "start_time": "2025-08-21T00:17:12.071981Z"
     }
    },
    "cell_type": "code",
@@ -245,13 +245,13 @@
    ],
    "id": "ba30b7340afaebd6",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-20T21:52:05.020592Z",
-     "start_time": "2025-08-20T21:52:05.004344Z"
+     "end_time": "2025-08-21T00:17:12.085220Z",
+     "start_time": "2025-08-21T00:17:12.080309Z"
     }
    },
    "cell_type": "code",
@@ -259,7 +259,7 @@
     "target_col = 'y' if 'y' in df.columns else df.select_dtypes(include=['number']).columns[0]\n",
     "df['outlier_iqr'] = detect_outliers_iqr(df[target_col])\n",
     "df['outlier_z'] = detect_outliers_zscore(df[target_col], threshold=3.0)\n",
-    "df[['outlier_iqr', 'outlier_z']].mean()  # fraction flagged"
+    "df[['outlier_iqr', 'outlier_z']].mean()"
    ],
    "id": "e30e53c2874ac9b7",
    "outputs": [
@@ -271,18 +271,18 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-20T21:52:35.449534Z",
-     "start_time": "2025-08-20T21:52:35.285013Z"
+     "end_time": "2025-08-21T00:17:12.198901Z",
+     "start_time": "2025-08-21T00:17:12.117654Z"
     }
    },
    "cell_type": "code",
@@ -320,13 +320,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 8
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-20T21:56:44.503632Z",
-     "start_time": "2025-08-20T21:56:44.482263Z"
+     "end_time": "2025-08-21T00:17:12.234905Z",
+     "start_time": "2025-08-21T00:17:12.227434Z"
     }
    },
    "cell_type": "code",
@@ -406,39 +406,231 @@
        "</div>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-20T22:56:29.610979Z",
-     "start_time": "2025-08-20T22:56:29.604922Z"
+     "end_time": "2025-08-21T00:17:12.270110Z",
+     "start_time": "2025-08-21T00:17:12.265365Z"
     }
    },
    "cell_type": "code",
-   "source": "df",
+   "source": "df[df['outlier_iqr'] == False]",
    "id": "38149a06994dff5e",
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "           date  daily_return  daily_return_2  outlier_iqr  outlier_z\n",
+       "0    2022-01-03      0.001263        0.003834        False      False\n",
+       "1    2022-01-04     -0.020046       -0.009506        False      False\n",
+       "2    2022-01-05      0.004739       -0.000535        False      False\n",
+       "3    2022-01-06      0.009953        0.012539        False      False\n",
+       "4    2022-01-07      0.008872        0.009840        False      False\n",
+       "..          ...           ...             ...          ...        ...\n",
+       "110  2022-06-06     -0.010598       -0.001576        False      False\n",
+       "111  2022-06-07     -0.004461        0.002448        False      False\n",
+       "112  2022-06-08     -0.011624       -0.013451        False      False\n",
+       "113  2022-06-09     -0.006220       -0.002045        False      False\n",
+       "114  2022-06-10      0.006093        0.004984        False      False\n",
+       "\n",
+       "[106 rows x 5 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>daily_return</th>\n",
+       "      <th>daily_return_2</th>\n",
+       "      <th>outlier_iqr</th>\n",
+       "      <th>outlier_z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>0.001263</td>\n",
+       "      <td>0.003834</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-01-04</td>\n",
+       "      <td>-0.020046</td>\n",
+       "      <td>-0.009506</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-01-05</td>\n",
+       "      <td>0.004739</td>\n",
+       "      <td>-0.000535</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-01-06</td>\n",
+       "      <td>0.009953</td>\n",
+       "      <td>0.012539</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-01-07</td>\n",
+       "      <td>0.008872</td>\n",
+       "      <td>0.009840</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>2022-06-06</td>\n",
+       "      <td>-0.010598</td>\n",
+       "      <td>-0.001576</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>2022-06-07</td>\n",
+       "      <td>-0.004461</td>\n",
+       "      <td>0.002448</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>2022-06-08</td>\n",
+       "      <td>-0.011624</td>\n",
+       "      <td>-0.013451</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>2022-06-09</td>\n",
+       "      <td>-0.006220</td>\n",
+       "      <td>-0.002045</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>2022-06-10</td>\n",
+       "      <td>0.006093</td>\n",
+       "      <td>0.004984</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>106 rows × 5 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 26
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-21T00:17:12.353204Z",
+     "start_time": "2025-08-21T00:17:12.347962Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "x = np.linspace(0, 10, 200)\n",
+    "y = 2.2 * x + 1 + np.random.normal(0, 1.2, size=x.size)\n",
+    "y[10] += 15; y[120] -= 13; y[160] += 18\n",
+    "df = pd.DataFrame({'x': x, 'y': y})\n",
+    "target_col = 'y'\n",
+    "df['outlier_iqr'] = detect_outliers_iqr(df[target_col])\n",
+    "df['outlier_z'] = detect_outliers_zscore(df[target_col], threshold=3.0)\n",
+    "df[['outlier_iqr', 'outlier_z']].mean()  # fraction flagged"
+   ],
+   "id": "62c99fdd65cf607c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "outlier_iqr    0.005\n",
+       "outlier_z      0.005\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 27
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-21T00:17:12.495163Z",
+     "start_time": "2025-08-21T00:17:12.490815Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df",
+   "id": "718fa63ca586a344",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
        "             x          y  outlier_iqr  outlier_z\n",
-       "0     0.000000   2.925952        False      False\n",
-       "1     0.050251   2.429187        False      False\n",
-       "2     0.100503  -0.702704        False      False\n",
-       "3     0.150754   0.346383        False      False\n",
-       "4     0.201005   2.112874        False      False\n",
+       "0     0.000000   1.331519        False      False\n",
+       "1     0.050251  -1.115001        False      False\n",
+       "2     0.100503   1.969787        False      False\n",
+       "3     0.150754   2.706032        False      False\n",
+       "4     0.201005   2.686840        False      False\n",
        "..         ...        ...          ...        ...\n",
-       "195   9.798995  23.270030        False      False\n",
-       "196   9.849246  22.383301        False      False\n",
-       "197   9.899497  22.881393        False      False\n",
-       "198   9.949749  23.209969        False      False\n",
-       "199  10.000000  21.041012        False      False\n",
+       "195   9.798995  25.020554        False      False\n",
+       "196   9.849246  24.042789        False      False\n",
+       "197   9.899497  22.870670        False      False\n",
+       "198   9.949749  21.856661        False      False\n",
+       "199  10.000000  22.534761        False      False\n",
        "\n",
        "[200 rows x 4 columns]"
       ],
@@ -471,35 +663,35 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.000000</td>\n",
-       "      <td>2.925952</td>\n",
+       "      <td>1.331519</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0.050251</td>\n",
-       "      <td>2.429187</td>\n",
+       "      <td>-1.115001</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.100503</td>\n",
-       "      <td>-0.702704</td>\n",
+       "      <td>1.969787</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.150754</td>\n",
-       "      <td>0.346383</td>\n",
+       "      <td>2.706032</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0.201005</td>\n",
-       "      <td>2.112874</td>\n",
+       "      <td>2.686840</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -513,35 +705,35 @@
        "    <tr>\n",
        "      <th>195</th>\n",
        "      <td>9.798995</td>\n",
-       "      <td>23.270030</td>\n",
+       "      <td>25.020554</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>196</th>\n",
        "      <td>9.849246</td>\n",
-       "      <td>22.383301</td>\n",
+       "      <td>24.042789</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
        "      <td>9.899497</td>\n",
-       "      <td>22.881393</td>\n",
+       "      <td>22.870670</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198</th>\n",
        "      <td>9.949749</td>\n",
-       "      <td>23.209969</td>\n",
+       "      <td>21.856661</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199</th>\n",
        "      <td>10.000000</td>\n",
-       "      <td>21.041012</td>\n",
+       "      <td>22.534761</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -551,53 +743,18 @@
        "</div>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-20T22:47:19.986811Z",
-     "start_time": "2025-08-20T22:47:19.969732Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "x = np.linspace(0, 10, 200)\n",
-    "y = 2.2 * x + 1 + np.random.normal(0, 1.2, size=x.size)\n",
-    "y[10] += 15; y[120] -= 13; y[160] += 18\n",
-    "df = pd.DataFrame({'x': x, 'y': y})\n",
-    "target_col = 'y'\n",
-    "df['outlier_iqr'] = detect_outliers_iqr(df[target_col])\n",
-    "df['outlier_z'] = detect_outliers_zscore(df[target_col], threshold=3.0)\n",
-    "df[['outlier_iqr', 'outlier_z']].mean()  # fraction flagged"
-   ],
-   "id": "62c99fdd65cf607c",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "outlier_iqr    0.005\n",
-       "outlier_z      0.005\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 12
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-20T22:47:20.308109Z",
-     "start_time": "2025-08-20T22:47:20.289661Z"
+     "end_time": "2025-08-21T00:17:12.535060Z",
+     "start_time": "2025-08-21T00:17:12.527808Z"
     }
    },
    "cell_type": "code",
@@ -626,8 +783,8 @@
      "data": {
       "text/plain": [
        "                 slope  intercept        r2       mae\n",
-       "all           2.179980   1.126180  0.893657  1.124043\n",
-       "filtered_iqr  2.145387   1.203371  0.928996  1.041332"
+       "all           2.169679   1.323542  0.871082  1.200432\n",
+       "filtered_iqr  2.136650   1.397242  0.900777  1.118809"
       ],
       "text/html": [
        "<div>\n",
@@ -657,37 +814,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>all</th>\n",
-       "      <td>2.179980</td>\n",
-       "      <td>1.126180</td>\n",
-       "      <td>0.893657</td>\n",
-       "      <td>1.124043</td>\n",
+       "      <td>2.169679</td>\n",
+       "      <td>1.323542</td>\n",
+       "      <td>0.871082</td>\n",
+       "      <td>1.200432</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>filtered_iqr</th>\n",
-       "      <td>2.145387</td>\n",
-       "      <td>1.203371</td>\n",
-       "      <td>0.928996</td>\n",
-       "      <td>1.041332</td>\n",
+       "      <td>2.136650</td>\n",
+       "      <td>1.397242</td>\n",
+       "      <td>0.900777</td>\n",
+       "      <td>1.118809</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 29
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-21T00:17:12.639099Z",
+     "start_time": "2025-08-21T00:17:12.637497Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "# I will choose the IQR method, which splits the data by quantiles and identifies outliers as those that are either far lower than the 25% quantile or far higher than the 75% quantile. The assumption is that the distribution can be reasonably summarized by quartiles and that such outliers distort the data and should be removed. I used k=1.5 in this project, which may be further optimized in the future according to the data. This approach removes the extreme tail events in the data. The risks are that true rare events might be wrongly removed or compressed, and reduced variability could understate risk.",
-   "id": "2e513f06260e8ce2"
+   "id": "2e513f06260e8ce2",
+   "outputs": [],
+   "execution_count": 30
   }
  ],
  "metadata": {
