--- a/project/src/outliers.ipynb
+++ b/project/src/outliers.ipynb
@@ -2,15 +2,68 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-08-20T23:48:23.231758Z",
+     "start_time": "2025-08-20T23:48:22.783065Z"
+    }
    },
-   "outputs": [],
    "source": [
-    ""
-   ]
+    "# Setup\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
+   ],
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-20T23:51:10.182284Z",
+     "start_time": "2025-08-20T23:51:10.175425Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def detect_outliers_iqr(series: pd.Series, k: float = 1.5) -> pd.Series:\n",
+    "    \"\"\"Return boolean mask for IQR-based outliers.\n",
+    "    Assumptions: distribution reasonably summarized by quartiles; k controls strictness.\n",
+    "    \"\"\"\n",
+    "    q1 = series.quantile(0.25)\n",
+    "    q3 = series.quantile(0.75)\n",
+    "    iqr = q3 - q1\n",
+    "    lower = q1 - k * iqr\n",
+    "    upper = q3 + k * iqr\n",
+    "    return (series < lower) | (series > upper)\n",
+    "\n",
+    "def detect_outliers_zscore(series: pd.Series, threshold: float = 3.0) -> pd.Series:\n",
+    "    \"\"\"Return boolean mask for Z-score outliers where |z| > threshold.\n",
+    "    Assumptions: roughly normal distribution; sensitive to heavy tails.\n",
+    "    \"\"\"\n",
+    "    mu = series.mean()\n",
+    "    sigma = series.std(ddof=0)\n",
+    "    z = (series - mu) / (sigma if sigma != 0 else 1.0)\n",
+    "    return z.abs() > threshold\n",
+    "\n",
+    "def winsorize_series(series: pd.Series, lower: float = 0.05, upper: float = 0.95) -> pd.Series:\n",
+    "    lo = series.quantile(lower)\n",
+    "    hi = series.quantile(upper)\n",
+    "    return series.clip(lower=lo, upper=hi)"
+   ],
+   "id": "a44983f16f81dd79",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "7dc2f74ce08b77da"
   }
  ],
  "metadata": {
