--- a/project/notebooks/Evaluation and Risk Communication.ipynb
+++ b/project/notebooks/Evaluation and Risk Communication.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-08-27T02:05:36.355320Z",
-     "start_time": "2025-08-27T02:05:36.350027Z"
+     "end_time": "2025-08-27T12:50:49.112584Z",
+     "start_time": "2025-08-27T12:50:49.109407Z"
     }
    },
    "source": [
@@ -19,13 +19,13 @@
     "plt.rcParams['figure.figsize'] = (8,5)"
    ],
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 38
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-27T02:05:36.364441Z",
-     "start_time": "2025-08-27T02:05:36.362014Z"
+     "end_time": "2025-08-27T12:50:49.532247Z",
+     "start_time": "2025-08-27T12:50:49.372290Z"
     }
    },
    "cell_type": "code",
@@ -33,11 +33,23 @@
     "import sys\n",
     "sys.path.append(\"/Users/billqiu/bootcamp_Zhiang_Qiu/homework/stage11_evaluation-risk-communication/src\")\n",
     "\n",
-    "from evaluation import *"
+    "from utils.py import *"
    ],
    "id": "86efee8017cd4450",
-   "outputs": [],
-   "execution_count": 27
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'utils'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[39], line 4\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01msys\u001B[39;00m\n\u001B[1;32m      2\u001B[0m sys\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39mappend(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m/Users/billqiu/bootcamp_Zhiang_Qiu/homework/stage11_evaluation-risk-communication/src\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m----> 4\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mutils\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpy\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;241m*\u001B[39m\n",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'utils'"
+     ]
+    }
+   ],
+   "execution_count": 39
   },
   {
    "metadata": {
