--- a/project/notebooks/productization.ipynb
+++ b/project/notebooks/productization.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-08-27T18:51:51.547762Z",
-     "start_time": "2025-08-27T18:51:51.540905Z"
+     "end_time": "2025-08-28T00:49:26.129442Z",
+     "start_time": "2025-08-28T00:49:25.979954Z"
     }
    },
    "source": [
@@ -23,13 +23,13 @@
     "np.random.seed(7)"
    ],
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-27T12:54:58.395038Z",
-     "start_time": "2025-08-27T12:54:58.392292Z"
+     "end_time": "2025-08-28T00:52:30.635877Z",
+     "start_time": "2025-08-28T00:52:30.627487Z"
     }
    },
    "cell_type": "code",
@@ -37,33 +37,51 @@
     "# Load data\n",
     "df = pd.read_csv('/Users/billqiu/bootcamp_Zhiang_Qiu/project/data/raw/api_source-alpha_symbol-MSFT_20250820-142556.csv')"
    ],
-   "id": "5844e7930b6afc3c",
+   "id": "49f0a9f40a9ccf8",
    "outputs": [],
    "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-27T12:54:58.401098Z",
-     "start_time": "2025-08-27T12:54:58.398027Z"
+     "end_time": "2025-08-28T00:53:44.074979Z",
+     "start_time": "2025-08-28T00:53:44.066806Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Create features\n",
     "df['ret'] = df['adj_close'].pct_change().fillna(0.0)\n",
+    "df['log_ret'] = np.log1p(df['ret'])\n",
     "df['ma_20'] = df['adj_close'].rolling(20).mean()\n",
-    "df['volatility'] = df['ret'].rolling(21).std()"
+    "df['volatility'] = df['ret'].rolling(21).std()\n",
+    "# RSI feature\n",
+    "rsi_window = 14\n",
+    "delta = df['log_ret']\n",
+    "gain = np.where(delta > 0, delta, 0)\n",
+    "loss = np.where(delta < 0, -delta, 0)\n",
+    "\n",
+    "avg_gain = pd.Series(gain).rolling(rsi_window, min_periods=rsi_window).mean()\n",
+    "avg_loss = pd.Series(loss).rolling(rsi_window, min_periods=rsi_window).mean()\n",
+    "\n",
+    "rs = avg_gain / avg_loss\n",
+    "df.loc[:, \"rsi\"] = 100 - (100 / (1 + rs))\n",
+    "# MACD feature\n",
+    "macd_short, macd_long, macd_signal = 12, 26, 9\n",
+    "exp1 = df['adj_close'].ewm(span=macd_short, adjust=False).mean()\n",
+    "exp2 = df['adj_close'].ewm(span=macd_long, adjust=False).mean()\n",
+    "df.loc[:, \"macd\"] = exp1 - exp2\n",
+    "df.loc[:, \"macd_signal\"] = df[\"macd\"].ewm(span=macd_signal, adjust=False).mean()"
    ],
-   "id": "7afbb9c4f39fa1a8",
+   "id": "e5bb9040cf8bda53",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-27T12:54:58.406109Z",
-     "start_time": "2025-08-27T12:54:58.403887Z"
+     "end_time": "2025-08-28T00:53:53.726859Z",
+     "start_time": "2025-08-28T00:53:53.722533Z"
     }
    },
    "cell_type": "code",
@@ -72,15 +90,15 @@
     "df.loc[:,\"pred\"] = (df[\"ret\"].shift(-1) > 0).astype(int)\n",
     "df = df.dropna()"
    ],
-   "id": "cf71d8f953b13a68",
+   "id": "db2968b5b9223987",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-27T12:54:58.498007Z",
-     "start_time": "2025-08-27T12:54:58.411817Z"
+     "end_time": "2025-08-28T00:53:58.614880Z",
+     "start_time": "2025-08-28T00:53:58.325058Z"
     }
    },
    "cell_type": "code",
@@ -92,15 +110,15 @@
     "from utils import train_random_forest\n",
     "model, X_test, y_test, y_pred = train_random_forest(df, feature_cols=['ma_20', 'volatility'], target_col='pred', n_estimators=200)"
    ],
-   "id": "393be166194dead6",
+   "id": "e2efe6c2dc7ce7a2",
    "outputs": [],
    "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-27T12:54:58.652014Z",
-     "start_time": "2025-08-27T12:54:58.589831Z"
+     "end_time": "2025-08-28T00:54:05.414440Z",
+     "start_time": "2025-08-28T00:54:05.322609Z"
     }
    },
    "cell_type": "code",
@@ -110,7 +128,7 @@
     "cm = confusion_matrix(y_test, y_pred)\n",
     "sns.heatmap(cm, annot=True, fmt='d'); plt.title('Confusion Matrix'); plt.show()"
    ],
-   "id": "6d6d1c648f112990",
+   "id": "52501dafdf69bb87",
    "outputs": [
     {
      "name": "stdout",
@@ -138,83 +156,41 @@
      "output_type": "display_data"
     }
    ],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-28T00:54:29.660825Z",
+     "start_time": "2025-08-28T00:54:29.608986Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "out_path = Path(\"/Users/billqiu/bootcamp_Zhiang_Qiu/project/model/model.pkl\")\n",
+    "out_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "joblib.dump(model, out_path)"
+   ],
+   "id": "42a7dd1bf9c45e57",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/Users/billqiu/bootcamp_Zhiang_Qiu/project/model/model.pkl']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-27T12:54:58.662034Z",
-     "start_time": "2025-08-27T12:54:58.660196Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "print(\"Basic analysis complete.\")",
-   "id": "2b06d1345590519d",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Basic analysis complete.\n"
-     ]
-    }
-   ],
-   "execution_count": 9
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-27T12:54:58.668126Z",
-     "start_time": "2025-08-27T12:54:58.666460Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "print(\"Notebook cleaned and ready for handoff.\")",
-   "id": "c17d3d5db4157229",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Notebook cleaned and ready for handoff.\n"
-     ]
-    }
-   ],
-   "execution_count": 10
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-27T18:52:53.011522Z",
-     "start_time": "2025-08-27T18:52:52.959470Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "out_path = Path(\"/Users/billqiu/bootcamp_Zhiang_Qiu/homework/stage13_productization/model/model.pkl\")\n",
-    "out_path.parent.mkdir(parents=True, exist_ok=True)\n",
-    "joblib.dump(model, out_path)"
-   ],
-   "id": "b4ca986f594b7f7",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/Users/billqiu/bootcamp_Zhiang_Qiu/homework/stage13_productization/model/model.pkl']"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 17
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-27T18:53:32.029083Z",
-     "start_time": "2025-08-27T18:53:32.014033Z"
+     "end_time": "2025-08-28T00:54:39.305382Z",
+     "start_time": "2025-08-28T00:54:39.296555Z"
     }
    },
    "cell_type": "code",
@@ -225,15 +201,15 @@
     "with open(out_path, 'rb') as f:\n",
     "    loaded_model = pickle.load(f)"
    ],
-   "id": "3eef8ba13152b9bc",
+   "id": "e5c9f480380d5b5",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-27T18:57:37.711110Z",
-     "start_time": "2025-08-27T18:57:37.678295Z"
+     "end_time": "2025-08-28T00:54:44.304678Z",
+     "start_time": "2025-08-28T00:54:44.291672Z"
     }
    },
    "cell_type": "code",
@@ -241,7 +217,7 @@
     "# Example prediction\n",
     "model.predict(X_test)"
    ],
-   "id": "b26caec63cf12c41",
+   "id": "5202c4c0c6b1ac8c",
    "outputs": [
     {
      "data": {
@@ -249,18 +225,18 @@
        "array([1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 0])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 21
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T01:20:20.202774Z",
-     "start_time": "2025-08-28T01:20:19.884880Z"
+     "end_time": "2025-08-28T01:21:36.342658Z",
+     "start_time": "2025-08-28T01:21:36.334492Z"
     }
    },
    "cell_type": "code",
@@ -308,9 +284,9 @@
     "    app.run(port=5000)\n",
     "\n",
     "# Launch Flask in a separate thread\n",
-    "threading.Thread(target=run_flask, daemon=True).start()"
+    "threading.Thread(target=run_flask).start()"
    ],
-   "id": "a6703ba137194feb",
+   "id": "19f122f201fbc35",
    "outputs": [
     {
      "name": "stdout",
@@ -326,33 +302,21 @@
      "text": [
       "\u001B[31m\u001B[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001B[0m\n",
       " * Running on http://127.0.0.1:5000\n",
-      "\u001B[33mPress CTRL+C to quit\u001B[0m\n"
+      "\u001B[33mPress CTRL+C to quit\u001B[0m\n",
+      "127.0.0.1 - - [27/Aug/2025 21:21:38] \"POST /predict HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [27/Aug/2025 21:21:38] \"GET /predict/2.0 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [27/Aug/2025 21:21:38] \"GET /predict/1.0/3.0 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [27/Aug/2025 21:21:38] \"GET /plot HTTP/1.1\" 200 -\n"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-28T01:11:50.813877Z",
-     "start_time": "2025-08-28T01:11:50.806003Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "from datetime import timedelta\n",
-    "app.config['PERMANENT_SESSION_LIFETIME'] = timedelta(minutes=1)"
-   ],
-   "id": "1a7fb6a74fd7450d",
-   "outputs": [],
-   "execution_count": 31
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-27T19:03:59.085558Z",
-     "start_time": "2025-08-27T19:03:58.982349Z"
+     "end_time": "2025-08-28T01:21:38.604385Z",
+     "start_time": "2025-08-28T01:21:38.460127Z"
     }
    },
    "cell_type": "code",
@@ -379,7 +343,7 @@
     "response_plot = requests.get('http://127.0.0.1:5000/plot')\n",
     "display(HTML(response_plot.text))"
    ],
-   "id": "b29270b7762f0a94",
+   "id": "4e00f6074a3638cc",
    "outputs": [
     {
      "name": "stdout",
@@ -413,7 +377,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 27
+   "execution_count": 16
   },
   {
    "metadata": {},
@@ -421,7 +385,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "144633b9df7e698a"
+   "id": "8fad28b475aa01aa"
   }
  ],
  "metadata": {
